# opentools

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pixi.toml  setup.py  template.sh
python/: bin_loader.py  cli.py  pixi.toml  pyproject.toml
rust/: Cargo.toml
rust/src/: argparse.rs  run.rs
rust/src/argparse/: dedupbarcode.rs  tilesmatch.rs  touchbarcode.rs
rust/src/utils/: barcode_iter.rs  error.rs  position.rs
src/: argparse.rs  lib.rs  main.rs  run.rs  utils.rs
src/argparse/: dedupbarcode.rs  fq2bam.rs
src/utils/: barcode_iter.rs  error.rs  fastqfile.rs
