[package]
name = "opentools"
version = "0.1.0"
edition = "2024"
authors = ["Falsetry <falsetryczz@gmail.com>"]
license = "MIT"
description = "A rust toolbox that replaces spacemake"
repository = "https://github.com/falsetry1514/opentools"
exclude = [
    "src/binaries/*",
    "src/postprecess/*",
    "src/opentools.egg-info/*",
    "src/*.py",
    "tests/*",
    "template.sh",
    "*.py",
    "*.md",
    "pixi.*",
    "MANIFEST.in",
    "dist/*",
    ".pixi/*",
    "LICENSE",
    "pyproject.toml"
]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
crossbeam = "0.8.4"
dashmap = "6.1.0"
flate2 = { version = "1.1.1", features = ["zlib-rs"] }
rayon = "1.10.0"
regex = "1.11.1"
rust-htslib = "0.49.0"
seq_io = "0.3.4"
thiserror = "2.0.12"

[target.x86_64-unknown-linux-musl]
linker = "x86_64-linux-musl-gcc"