[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opentools"
version = "0.1.0"
authors = [
    {name = "Falsetry", email = "falsetryczz@Gmail.com"}
]
description = "High-performance bioinformatics tools implemented in Rust"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/falsetry/opentools"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["opentools", "opentools.*"]

[tool.setuptools.package-data]
opentools = ["binaries/*/*"]